k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: blackfriday
spec:
  selector:
    app: api
  ports:
    - port: 3001
      targetPort: 3001
