k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: blackfriday
spec:
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
