k8s/service-pgbouncer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: blackfriday
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 6432
      targetPort: 6432
