k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: blackfriday
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
